# FINM-25000-Homework-2-

./: .gitignore  README.md  app.py  backtest.py  backtest_app.py  connector.py  data_loader.py  generate_report.py  historical_viewer.py  indicators.py  metrics.py  pyproject.toml  strategies.py  test_backtesting.py  test_connector.py
